--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,2 +1,5 @@
 web: gunicorn neora.wsgi:application --bind 0.0.0.0:$PORT
 worker: celery -A neora worker --loglevel=info
+
+
+web: python manage.py migrate && python manage.py collectstatic --noinput && daphne neora.asgi:application --bind 0.0.0.0 --port $PORT
