--- a/render.yaml
+++ b/render.yaml
@@ -19,8 +19,6 @@ services:
         value: "False"
       - key: DJANGO_ALLOWED_HOSTS
         value: "neora-backend.onrender.com"
-      - key: DATABASE_ENGINE
-        value: "django.db.backends.postgresql"
       - key: CORS_ALLOWED_ORIGINS
         value: "https://neora-frontend.onrender.com"
       - key: CSRF_TRUSTED_ORIGINS
@@ -38,9 +36,8 @@ services:
           property: connectionString
 
   # Frontend Service
-  - type: web
+  - type: static
     name: neora-frontend
-    env: static
     buildCommand: |
       cd frontend/neora-frontend
       npm install
