--- a/render.yaml
+++ b/render.yaml
@@ -19,13 +19,15 @@ services:
       - key: DJANGO_DEBUG
         value: "False"
       - key: DJANGO_ALLOWED_HOSTS
-        value: "neora-backend.onrender.com"
+        value: "*.onrender.com,neora-backend.onrender.com"
       - key: CORS_ALLOWED_ORIGINS
         value: "https://neora-frontend.onrender.com"
       - key: CSRF_TRUSTED_ORIGINS
         value: "https://neora-frontend.onrender.com"
       - key: FRONTEND_BASE_URL
         value: "https://neora-frontend.onrender.com"
+      - key: BACKEND_BASE_URL
+        value: "https://neora-backend.onrender.com"
       - key: REDIS_URL
         fromService:
           type: redis
