--- a/render.yaml
+++ b/render.yaml
@@ -19,15 +19,15 @@ services:
       - key: DJANGO_DEBUG
         value: "False"
       - key: DJANGO_ALLOWED_HOSTS
-        value: "*.onrender.com,neora-backend.onrender.com"
+        value: "*.onrender.com"
       - key: CORS_ALLOWED_ORIGINS
-        value: "https://neora-frontend.onrender.com"
+        value: "https://neora-frontend-hh8f.onrender.com"
       - key: CSRF_TRUSTED_ORIGINS
-        value: "https://neora-frontend.onrender.com"
+        value: "https://neora-frontend-hh8f.onrender.com"
       - key: FRONTEND_BASE_URL
-        value: "https://neora-frontend.onrender.com"
+        value: "https://neora-frontend-hh8f.onrender.com"
       - key: BACKEND_BASE_URL
-        value: "https://neora-backend.onrender.com"
+        value: "https://neora-backend-zl4q.onrender.com"
       - key: REDIS_URL
         fromService:
           type: redis
@@ -52,9 +52,9 @@ services:
       - key: NODE_VERSION
         value: "18"
       - key: VITE_API_BASE_URL
-        value: "https://neora-backend.onrender.com/api"
+        value: "https://neora-backend-zl4q.onrender.com/api"
       - key: VITE_WS_BASE_URL
-        value: "wss://neora-backend.onrender.com/ws"
+        value: "wss://neora-backend-zl4q.onrender.com/ws"
 
   # Redis Service
   - type: redis
