--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,7 @@ services:
       cd backend
       pip install --upgrade pip
       pip install -r requirements.txt
+      python manage.py makemigrations
       python manage.py migrate
       python manage.py collectstatic --noinput
     startCommand: |
