--- a/render.yaml
+++ b/render.yaml
@@ -8,8 +8,8 @@ services:
       cd backend
       pip install --upgrade pip
       pip install -r requirements.txt
-      python manage.py makemigrations
-      python manage.py migrate
+      python manage.py makemigrations --noinput
+      python manage.py migrate --noinput
       python manage.py collectstatic --noinput
     startCommand: |
       cd backend
@@ -38,6 +38,37 @@ services:
         fromDatabase:
           name: neora-db
           property: connectionString
+      # Email Configuration
+      - key: EMAIL_BACKEND
+        value: "django.core.mail.backends.smtp.EmailBackend"
+      - key: EMAIL_HOST
+        value: "smtp.gmail.com"
+      - key: EMAIL_HOST_USER
+        value: "your-email@gmail.com"
+      - key: EMAIL_HOST_PASSWORD
+        value: "your-app-password"
+      - key: EMAIL_PORT
+        value: "587"
+      - key: EMAIL_USE_TLS
+        value: "true"
+      - key: DEFAULT_FROM_EMAIL
+        value: "noreply@neora.com"
+      # n8n AI Integration
+      - key: N8N_WEBHOOK_URL
+        value: "https://your-n8n-instance.com/webhook/neora-chat"
+      - key: N8N_BASIC_AUTH
+        value: "your-username:your-password"
+      - key: N8N_API_KEY_HEADER
+        value: "X-API-Key"
+      - key: N8N_API_KEY_VALUE
+        value: "your-api-key"
+      # Optional Features
+      - key: ENABLE_TRANSCRIPTION
+        value: "false"
+      - key: LANGUAGE_CODE
+        value: "en"
+      - key: TIMEZONE
+        value: "Asia/Riyadh"
 
   # Frontend Service
   - type: web
