--- a/render.yaml
+++ b/render.yaml
@@ -71,9 +71,8 @@ services:
         value: "Asia/Riyadh"
 
   # Frontend Service
-  - type: web
+  - type: static
     name: neora-frontend
-    env: static
     buildCommand: |
       cd frontend/neora-frontend
       npm install -g pnpm
@@ -87,6 +86,8 @@ services:
         value: "https://neora-backend-zl4q.onrender.com/api"
       - key: VITE_WS_BASE_URL
         value: "wss://neora-backend-zl4q.onrender.com/ws"
+      - key: VITE_BACKEND_URL
+        value: "https://neora-backend-zl4q.onrender.com"
 
   # Redis Service
   - type: redis
