--- a/frontend/neora-frontend/.env
+++ b/frontend/neora-frontend/.env
@@ -1,5 +1,11 @@
 ﻿# API Configuration
-VITE_API_BASE_URL=http://localhost:8001/api
+#VITE_API_BASE_URL=http://localhost:8001/api
 
 # WebSocket Configuration
-VITE_WS_BASE_URL=ws://localhost:8001/ws
+#VITE_WS_BASE_URL=ws://localhost:8001/ws
+
+
+
+VITE_API_BASE_URL=https://neora-backend-zl4q.onrender.com/api
+
+VITE_WS_BASE_URL=wss://neora-backend-zl4q.onrender.com/ws
